--- a/frontend/src/components/Form/form-style.css
+++ b/frontend/src/components/Form/form-style.css
@@ -17,7 +17,7 @@
 /* ----------- NUMBER ----------- */
 
 .numbers {
-  padding: 0 20%;
+  padding: 1.2rem 20%;
   display: grid;
   grid-template-columns: 4rem auto 4rem auto 4rem;
   column-gap: 1.2rem;
@@ -50,9 +50,6 @@
 
 /* ----------- HEAD SECTION ----------- */
 
-.form-container .header {
-  padding: 0rem 1.2rem;
-}
 .form-container .header h1 {
   font-size: 2.4rem;
   color: #333;
@@ -65,7 +62,7 @@
 
 /* ----------- FOOTER SECTION ----------- */
 .form-container .footer {
-  padding: 0 1.2rem;
+  padding: 2.4rem 1.2rem 0 1.2rem;
   display: flex;
   justify-content: space-between;
 }
@@ -188,9 +185,6 @@ h5 {
 .info-photo {
   grid-row: 1 / span 2;
   grid-column: 2/3;
-
-  display: flex;
-  flex-direction: column;
 }
 
 /* ----------- SubmitInfo Section ----------- */
@@ -251,6 +245,10 @@ h5 {
 
 .end {
   margin-left: auto;
+}
+
+.choice-text {
+  margin-bottom: 0 !important;
 }
 
 /* ----------- */
