--- a/frontend/src/components/Search/search.css
+++ b/frontend/src/components/Search/search.css
@@ -5,7 +5,7 @@ body {
 }
 
 .main {
-  max-width: 170rem;
+  /* max-width: 170rem;  */
   height: 100vh;
   font-size: 1.3em;
 
@@ -174,4 +174,9 @@ select {
 .map-side {
   max-width: 100%;
   background-color: #62c2c0;
+}
+
+.map-page {
+  width: 100vw;
+  height: 100vh;
 }
