--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,3 +15,10 @@ html {
   font-size: 62.5%;
   overflow-x: hidden;
 }
+
+@media screen and (min-width: 1800px) {
+  html {
+    font-size: 80%;
+    overflow-x: hidden;
+  }
+}
