--- a/frontend/src/components/Search/search.css
+++ b/frontend/src/components/Search/search.css
@@ -180,3 +180,13 @@ select {
   width: 100vw;
   height: 100vh;
 }
+
+@media screen and (min-width: 1900px) {
+  .search-box {
+    padding: 1.2rem 4rem;
+  }
+
+  .search-box input {
+    margin-right: 1.2rem;
+  }
+}
